--- a/.github/workflows/punch_in.yml
+++ b/.github/workflows/punch_in.yml
@@ -15,3 +15,8 @@ jobs:
         uses: actions/checkout@v1
       - name: "Punch in"
         run: ./punch_in
+      - name: "Run qiandao.py"
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests  # 安装 requests 库
+          python qiandao.py
