--- a/.github/workflows/punch_in.yml
+++ b/.github/workflows/punch_in.yml
@@ -19,4 +19,4 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests  # 安装 requests 库
-          python qiandao.py
+          python jmqiandao.py
